--- a/CJChat/Views/Home/Index.cshtml
+++ b/CJChat/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
     {
     <p class="lead">Enter a username to continue.</p>
     <p>@Html.TextBox("userName") <input type="submit" value="Enter" /></p>
+    <p>@Html.CheckBox("remember",true) Remember Me?</p>
     }
 </div>
