Feature/history inmemory (#2)
* In memory persistence of messages added, and display on logging in

* Timestamp added as tooltip on displayed messages

--- a/CJChat/Views/Home/Chat.cshtml
+++ b/CJChat/Views/Home/Chat.cshtml
@@ -4,7 +4,12 @@
             <!--Body content-->
 
             <div id="livechat" class="well" style="min-height:460px;">
-                <ul id="discussion"></ul>
+                <ul id="discussion">
+                    @foreach (CJChat.Models.ChatMessage message in CJChat.Classes.MessageStore.Messages.OrderBy(x=>x.TimeStamp))
+    {
+                <li><strong title="@message.TimeStamp.ToString("g")">@message.UserName </strong>: @message.Message</li>
+    }
+                </ul>
             </div>
 
         </div>
@@ -48,9 +53,9 @@
             // Reference the auto-generated proxy for the hub.
             var chat = $.connection.chatHub;
             // Create a function that the hub can call back to display messages.
-            chat.client.addMessage = function (name, message) {
+            chat.client.addMessage = function (name, message, timestamp) {
                 // Add the message to the page.
-                $('#discussion').append('<li><strong>' + htmlEncode(name)
+                $('#discussion').append('<li><strong title="' + htmlEncode(timestamp) + '">' + htmlEncode(name)
                     + '</strong>: ' + htmlEncode(message) + '</li>');
             };
             // Create a function to update the online users list
