--- a/CJChat/Views/Shared/_Layout.cshtml
+++ b/CJChat/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
         window.appInsights=appInsights;
         appInsights.trackPageView();
     </script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
