icon changed colour for user

--- a/CJChat/Content/Site.css
+++ b/CJChat/Content/Site.css
@@ -176,6 +176,7 @@ textarea {
     display: inline-block;
     padding-right: 6px;
     vertical-align: middle;
+    color:#53937c;
 }
 /* remove important once style order has been corrected*/
 .well {
