--- a/CJChat/Views/Home/Chat.cshtml
+++ b/CJChat/Views/Home/Chat.cshtml
@@ -19,6 +19,8 @@
 
             <div id="users_online">
                 <ul id="online"></ul>
+                <hr width="85%" />
+                @Html.ActionLink("Sign Out", "SignOut")
             </div>
 
         </div>
