--- a/CJChat/Views/Home/Chat.cshtml
+++ b/CJChat/Views/Home/Chat.cshtml
@@ -1,33 +1,34 @@
 ﻿<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span10">
-            <!--Body content-->
 
-            <div id="livechat" class="well" style="min-height:460px;">
-                <ul id="discussion">
-                    @foreach (CJChat.Models.ChatMessage message in CJChat.Classes.MessageStore.Messages.OrderBy(x=>x.TimeStamp))
-    {
-                <li><strong>@message.UserName </strong>: @message.Message <span class="timestamp">@message.TimeStamp.ToString("g")</span></li>
-    }
-                </ul>
-            </div>
-
-        </div>
-
-        <div class="span2">
-            <!--Sidebar content-->
-
-            <div id="users_online">
-                <ul id="online"></ul>
-                <hr width="85%" />
+        <div class="row-fluid">
+            <div class="span12" style="text-align:right;">
                 @Html.ActionLink("Sign Out", "SignOut")
             </div>
+        </div>
+        <div class="row-fluid">
+
+            <div class="span10">
+                <!--Body content-->
+
+                <div id="livechat" class="well" style="min-height:460px;">
+                    <ul id="discussion">
+                        @foreach (CJChat.Models.ChatMessage message in CJChat.Classes.MessageStore.Messages.OrderBy(x => x.TimeStamp))
+                {
+                    <li><strong>@message.UserName </strong>: @message.Message <span class="timestamp">@message.TimeStamp.ToString("g")</span></li>
+        }
+                    </ul>
+                </div>
+
+            </div>
+            <div class="span2">
+                <!--Sidebar content-->
+                <div id="users_online">
+                    <ul id="online"></ul>
+                </div>
+            </div>
 
         </div>
-
-
     </div>
-</div>
 
 <div class="navbar navbar-fixed-bottom">
     <div class="navbar-inner">
