--- a/CJChat/Views/Shared/_Layout.cshtml
+++ b/CJChat/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
         </div>*@
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
     <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
     <!--Reference the SignalR library. -->
