--- a/CJChat/Content/Site.css
+++ b/CJChat/Content/Site.css
@@ -181,9 +181,12 @@ textarea {
 }*/
 /* remove important once style order has been corrected*/
 .well {
-
-  border: 1px solid #85aa77 !important;
-  background-color: #f6f9f6 !important;
+	border: 1px solid #85aa77 !important;
+	background-color: #f6f9f6 !important;
+	min-height: 460px;
+	height: 460px;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 .btn-primary {
