--- a/CJChat/Content/Site.css
+++ b/CJChat/Content/Site.css
@@ -183,8 +183,8 @@ textarea {
 .well {
 	border: 1px solid #85aa77 !important;
 	background-color: #f6f9f6 !important;
-	min-height: 460px;
-	height: 460px;
+	min-height: 390px;
+	height: 390px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
@@ -210,4 +210,39 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled = false) !important;
 		display: inline;
 		padding-right: 15px;
 	}
+}
+
+#users_online
+{
+  width:100%;
+  margin-bottom:20px;
+  min-height:20px;
+  max-height:40px !important;
+  height:40px;
+  overflow-y: scroll;
+
+
+  
+}
+
+#users_online ul li
+{
+  width:auto;
+  padding:0px 5px 5px;
+  display: block;
+  float:left;
+}
+
+#users_online ul {
+   list-style-position: inside !important;
+  display: inline-block;
+}
+
+#send
+{
+  width:100px
+}
+#message
+{
+  width:360px;
 }
